fixed the overlay overlapping

--- a/style.css
+++ b/style.css
@@ -231,6 +231,7 @@ p[data-width='wide'] {
   .primary-header[data-overlay]::before {
     content: '';
     position: fixed;
+    z-index: 1000;
     inset: 0;
     /* height: 100vh; */
     /* background: var(--clr-accent-400); */
